FIX z-index carousel

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -321,6 +321,7 @@ a:hover, a:focus{
     
     #carouselIndex{
     	margin: -45px -30px 0 -30px;
+    	z-index: -1;
     }
     
     .carousel-inner>.item{
